styles work, almoust done

--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
     <main>
         <!-- menu section -->
         <section class="menu section">
+            <h2 class="hidden">Меню</h2>
             <ul class="menu-list list">
                 <li class="menu-list-item">
-                    <h2 class="menu-title">корпоративы</h2>
+                    <h3 class="menu-title">корпоративы</h3>
                     <p class="menu-subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
                 </li>
                 <li class="menu-list-item">
-                    <h2 class="menu-title">свадьбы</h2>
+                    <h3 class="menu-title">свадьбы</h3>
                     <p class="menu-subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
                 </li>
                 <li class="menu-list-item">
-                    <h2 class="menu-title">званые вечера</h2>
+                    <h3 class="menu-title">званые вечера</h3>
                     <p class="menu-subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
                 </li>
             </ul>
@@ -106,7 +107,7 @@
         </section>
         <!-- learn more section -->
         <section class="learn-more section">
-            <h2 class="learn-more-title">узнайте о нас больше</h2>
+            <h2 class="learn-more-title title">узнайте о нас больше</h2>
             <a href="#" download class="learn-more-link link">Скачать план</a>
             <a href="#" download class="learn-more-link link">Скачать презентацию</a>
         </section>
@@ -119,27 +120,38 @@
                 <ul class="address-list list">
                     <li>
                         <h2 class="subtitle">ресторан</h2>
-                        <ul>
-                            <li><a href="https://goo.gl/maps/ms1uTJaVjh3mroaZ7"
-                                    rel="noopener noreferrer">Санкт-Петербургское
-                                    шоссе, д 130, к. 7</a></li>
-                            <li><a href="tel:+78122106795" rel="noopener noreferrer">+7 (812) 210 67 95</a></li>
-                            <li><a href="mailto:hello@summerpalace.ru"
-                                    rel="noopener noreferrer">hello@summerpalace.ru</a>
+                        <ul class="list">
+                            <li>
+                                <a href="https://goo.gl/maps/ms1uTJaVjh3mroaZ7" rel="noopener noreferrer"
+                                    class="address-link map-link">Санкт-Петербургское
+                                    шоссе, д 130, к. 7</a>
+                            </li>
+                            <li>
+                                <a href="tel:+78122106795" rel="noopener noreferrer" class="address-link">+7 (812)
+                                    210 67 95</a>
+                            </li>
+                            <li>
+                                <a href="mailto:hello@summerpalace.ru" rel="noopener noreferrer"
+                                    class="address-link">hello@summerpalace.ru</a>
                             </li>
                         </ul>
                     </li>
                     <li>
                         <h2 class="subtitle">офис</h2>
-                        <ul>
+                        <ul class="list">
                             <li>
-                                <a href="https://goo.gl/maps/ms1uTJaVjh3mroaZ7" rel="noopener noreferrer">ст. м.
+                                <a href="https://goo.gl/maps/ms1uTJaVjh3mroaZ7" rel="noopener noreferrer"
+                                    class="address-link office-link">ст. м.
                                     «Лиговский
                                     проспект», ул. Черняховского, д. 75</a>
                             </li>
-                            <li><a href="tel:+78122106795" rel="noopener noreferrer">+7 (812) 210 67 95</a></li>
-                            <li><a href="mailto:hello@summerpalace.ru"
-                                    rel="noopener noreferrer">hello@summerpalace.ru</a>
+                            <li>
+                                <a href="tel:+78122106795" rel="noopener noreferrer" class="address-link">+7 (812)
+                                    210 67 95</a>
+                            </li>
+                            <li>
+                                <a href="mailto:hello@summerpalace.ru" rel="noopener noreferrer"
+                                    class="address-link">hello@summerpalace.ru</a>
                             </li>
                         </ul>
                     </li>
