validator, mistakes fixed

--- a/index.html
+++ b/index.html
@@ -1,179 +1,209 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Summer Palace</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-<body>
+  <body>
     <!-- header -->
     <header class="header">
-        <img src="./images/logo.svg" alt="Логотип" width="160" height="87">
-        <nav class="site-nav">
-            <ul class="nav-list list">
-                <li><a href="#" class="link current">Главная</a></li>
-                <li><a href="#" class="link">SOFIT EVENT HOUSE</a></li>
-                <li><a href="#" class="link">МЕРОПРИЯТИЯ</a></li>
-                <li><a href="#" class="link">ТУРИСТАМ</a></li>
-                <li><a href="#" class="link">КЕЙТЕРИНГ</a></li>
-                <li><a href="#" class="link">ДЛЯ АГЕНТСТВ</a></li>
-            </ul>
-        </nav>
-        <img src="./images/ext-menu.svg" alt="Бургер меню" width="40" height="20">
+      <img src="./images/logo.svg" alt="Логотип" width="160" height="87" />
+      <nav class="site-nav">
+        <ul class="nav-list list">
+          <li><a href="#" class="link current">Главная</a></li>
+          <li><a href="#" class="link">SOFIT EVENT HOUSE</a></li>
+          <li><a href="#" class="link">МЕРОПРИЯТИЯ</a></li>
+          <li><a href="#" class="link">ТУРИСТАМ</a></li>
+          <li><a href="#" class="link">КЕЙТЕРИНГ</a></li>
+          <li><a href="#" class="link">ДЛЯ АГЕНТСТВ</a></li>
+        </ul>
+      </nav>
+      <img src="./images/ext-menu.svg" alt="Бургер меню" width="40" height="20" />
     </header>
     <!-- main -->
     <main>
-        <!-- menu section -->
-        <section class="menu section">
-            <h2 class="hidden">Меню</h2>
-            <ul class="menu-list list">
-                <li class="menu-list-item">
-                    <h3 class="menu-title">корпоративы</h3>
-                    <p class="menu-subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
-                </li>
-                <li class="menu-list-item">
-                    <h3 class="menu-title">свадьбы</h3>
-                    <p class="menu-subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
-                </li>
-                <li class="menu-list-item">
-                    <h3 class="menu-title">званые вечера</h3>
-                    <p class="menu-subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
-                </li>
-            </ul>
-        </section>
-        <!-- about restaurant section -->
-        <section class="about section">
-            <h1 class="site-title">О РЕСТОРАНЕ</h1>
-            <img src="./images/logo-small.svg" alt="Логотип" width="46" height="30">
-            <p class="logo-descr">летний дворец</p>
-            <iframe width="920" height="479" src="https://www.youtube.com/embed/zyZAMR56mXY"
-                title="Норвегия. Богатая и очень красивая. Большой Выпуск." frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <img src="./images/logo.svg" alt="Логотип" width="203" height="110">
-            <p class="text-descr">Добро пожаловать в Летний Дворец!</p>
+      <!-- menu section -->
+      <section class="menu section">
+        <h2 class="hidden">Меню</h2>
+        <ul class="menu-list list">
+          <li class="menu-list-item">
+            <h3 class="menu-title">корпоративы</h3>
+            <p class="menu-subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
+          </li>
+          <li class="menu-list-item">
+            <h3 class="menu-title">свадьбы</h3>
+            <p class="menu-subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
+          </li>
+          <li class="menu-list-item">
+            <h3 class="menu-title">званые вечера</h3>
+            <p class="menu-subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
+          </li>
+        </ul>
+      </section>
+      <!-- about restaurant section -->
+      <section class="about section">
+        <h1 class="site-title">О РЕСТОРАНЕ</h1>
+        <img src="./images/logo-small.svg" alt="Логотип" width="46" height="30" />
+        <p class="logo-descr">летний дворец</p>
+        <iframe
+          width="920"
+          height="479"
+          src="https://www.youtube.com/embed/zyZAMR56mXY"
+          title="Норвегия. Богатая и очень красивая. Большой Выпуск."
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <img src="./images/logo.svg" alt="Логотип" width="203" height="110" />
+        <p class="text-descr">Добро пожаловать в Летний Дворец!</p>
+        <p class="text-descr">
+          Всего в 12 километрах от Петербурга, неподалеку от знаменитых фонтанов и парков Петергофа
+          воплощен в жизнь один из самых грандиозных проектов event-индустрии России – ресторанный
+          комплекс «Летний Дворец». Открытый в 2009 году, он объединил под одной крышей современный
+          банкетный зал в исторических дворцовых интерьерах на 800 гостей и собственный кейтеринг.
+        </p>
+        <ul class="about-list list">
+          <li>
+            <img src="./images/logo-small.svg" alt="Логотип пункта" width="46" height="30" />
+            <h2 class="subtitle">площадка</h2>
             <p class="text-descr">
-                Всего в 12 километрах от Петербурга, неподалеку от знаменитых фонтанов и парков Петергофа воплощен в
-                жизнь один из самых грандиозных проектов event-индустрии России – ресторанный комплекс «Летний Дворец».
-                Открытый в 2009 году, он объединил под одной крышей современный банкетный зал в исторических дворцовых
-                интерьерах на 800 гостей и собственный кейтеринг.</p>
-            <ul class="about-list list">
-                <li>
-                    <img src="./images/logo-small.svg" alt="Логотип пункта" width="46" height="30">
-                    <h2 class="subtitle">площадка</h2>
-                    <p class="text-descr">Сочетание классических интерьеров и современных технических возможностей
-                        выгодно отличают Летний Дворец от большинства
-                        других исторических площадок города.</p>
-                </li>
-                <li>
-                    <img src="./images/interior.svg" alt="Логотип пункта" width="39" height="20">
-                    <h2 class="subtitle">интерьеры</h2>
-                    <p class="text-descr">Изысканное внутреннее убранство Летнего Дворца — тонко выполненная стилизация
-                        с использованием традиционных технологий и
-                        материалов — мрамора, бронзового литья.</p>
-                </li>
-                <li>
-                    <img src="./images/technologies.svg" alt="Логотип пункта" width="37" height="31">
-                    <h2 class="subtitle">технологии</h2>
-                    <p class="text-descr">Возможности «Летнего Дворца» практически безграничны с точки зрения проведения
-                        мероприятий самого разного формата и
-                        масштаба.</p>
-                </li>
-                <li>
-                    <img src="./images/equipment.svg" alt="Логотип пункта" width="43" height="37">
-                    <h2 class="subtitle">оборудование</h2>
-                    <p class="text-descr">Установлен комплект самого современного звукового оборудования, который
-                        приятно удивит даже знатока качественного звука.</p>
-                </li>
-            </ul>
-        </section>
-        <!-- gallery section -->
-        <section class="gallery section">
-            <h2 class="gallery-title title">галерея</h2>
-            <img src="./images/logo-small.svg" alt="Логотип" width="46" height="30">
-            <p class="logo-descr">летний дворец</p>
-            <img src="./images/gallery-1-min.jpg" alt="Галерея" width="445" height="300">
-            <img src="./images/gallery-2-min.jpg" alt="Галерея" width="350" height="300">
-            <img src="./images/gallery-3-min.jpg" alt="Галерея" width="635" height="630">
-            <img src="./images/gallery-4-min.jpg" alt="Галерея" width="445" height="300">
-            <img src="./images/gallery-5-min.jpg" alt="Галерея" width="445" height="300">
-        </section>
-        <!-- learn more section -->
-        <section class="learn-more section">
-            <h2 class="learn-more-title title">узнайте о нас больше</h2>
-            <a href="#" download class="learn-more-link link">Скачать план</a>
-            <a href="#" download class="learn-more-link link">Скачать презентацию</a>
-        </section>
-        <!-- form section -->
-        <section class="form-section section">
-            <h2 class="form-title title">хотите провести мероприятие?</h2>
-            <p class="text-descr">Или у вас остались вопросы, на которые мы сможем вам ответить
-                в процессе разговора - напишите нам. Мы открыты для диалога!</p>
+              Сочетание классических интерьеров и современных технических возможностей выгодно
+              отличают Летний Дворец от большинства других исторических площадок города.
+            </p>
+          </li>
+          <li>
+            <img src="./images/interior.svg" alt="Логотип пункта" width="39" height="20" />
+            <h2 class="subtitle">интерьеры</h2>
+            <p class="text-descr">
+              Изысканное внутреннее убранство Летнего Дворца — тонко выполненная стилизация с
+              использованием традиционных технологий и материалов — мрамора, бронзового литья.
+            </p>
+          </li>
+          <li>
+            <img src="./images/technologies.svg" alt="Логотип пункта" width="37" height="31" />
+            <h2 class="subtitle">технологии</h2>
+            <p class="text-descr">
+              Возможности «Летнего Дворца» практически безграничны с точки зрения проведения
+              мероприятий самого разного формата и масштаба.
+            </p>
+          </li>
+          <li>
+            <img src="./images/equipment.svg" alt="Логотип пункта" width="43" height="37" />
+            <h2 class="subtitle">оборудование</h2>
+            <p class="text-descr">
+              Установлен комплект самого современного звукового оборудования, который приятно удивит
+              даже знатока качественного звука.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- gallery section -->
+      <section class="gallery section">
+        <h2 class="gallery-title title">галерея</h2>
+        <img src="./images/logo-small.svg" alt="Логотип" width="46" height="30" />
+        <p class="logo-descr">летний дворец</p>
+        <img src="./images/gallery-1-min.jpg" alt="Галерея" width="445" height="300" />
+        <img src="./images/gallery-2-min.jpg" alt="Галерея" width="350" height="300" />
+        <img src="./images/gallery-3-min.jpg" alt="Галерея" width="635" height="630" />
+        <img src="./images/gallery-4-min.jpg" alt="Галерея" width="445" height="300" />
+        <img src="./images/gallery-5-min.jpg" alt="Галерея" width="445" height="300" />
+      </section>
+      <!-- learn more section -->
+      <section class="learn-more section">
+        <h2 class="learn-more-title title">узнайте о нас больше</h2>
+        <a href="#" download class="learn-more-link link">Скачать план</a>
+        <a href="#" download class="learn-more-link link">Скачать презентацию</a>
+      </section>
+      <!-- form section -->
+      <section class="form-section section">
+        <h2 class="form-title title">хотите провести мероприятие?</h2>
+        <p class="text-descr">
+          Или у вас остались вопросы, на которые мы сможем вам ответить в процессе разговора -
+          напишите нам. Мы открыты для диалога!
+        </p>
+        <ul class="address-list list">
+          <li>
+            <h2 class="subtitle">ресторан</h2>
             <address class="address">
-                <ul class="address-list list">
-                    <li>
-                        <h2 class="subtitle ">ресторан</h2>
-                        <ul class="list">
-                            <li>
-                                <a href="https://goo.gl/maps/ms1uTJaVjh3mroaZ7" rel="noopener noreferrer"
-                                    class="address-link map-link">Санкт-Петербургское
-                                    шоссе, д 130, к. 7</a>
-                            </li>
-                            <li>
-                                <a href="tel:+78122106795" rel="noopener noreferrer" class="address-link">+7 (812)
-                                    210 67 95</a>
-                            </li>
-                            <li>
-                                <a href="mailto:hello@summerpalace.ru" rel="noopener noreferrer"
-                                    class="address-link">hello@summerpalace.ru</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <h2 class="subtitle">офис</h2>
-                        <ul class="list">
-                            <li>
-                                <a href="https://goo.gl/maps/ms1uTJaVjh3mroaZ7" rel="noopener noreferrer"
-                                    class="address-link office-link">ст. м.
-                                    «Лиговский
-                                    проспект», ул. Черняховского, д. 75</a>
-                            </li>
-                            <li>
-                                <a href="tel:+78122106795" rel="noopener noreferrer" class="address-link">+7 (812)
-                                    210 67 95</a>
-                            </li>
-                            <li>
-                                <a href="mailto:hello@summerpalace.ru" rel="noopener noreferrer"
-                                    class="address-link">hello@summerpalace.ru</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+              <ul class="list">
+                <li>
+                  <a
+                    href="https://goo.gl/maps/ms1uTJaVjh3mroaZ7"
+                    rel="noopener noreferrer"
+                    class="address-link map-link"
+                    >Санкт-Петербургское шоссе, д 130, к. 7</a
+                  >
+                </li>
+                <li>
+                  <a href="tel:+78122106795" rel="noopener noreferrer" class="address-link"
+                    >+7 (812) 210 67 95</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="mailto:hello@summerpalace.ru"
+                    rel="noopener noreferrer"
+                    class="address-link"
+                    >hello@summerpalace.ru</a
+                  >
+                </li>
+              </ul>
             </address>
-            <form action="#">
-                <input type="text" name="Name" placeholder="Ваше имя" tabindex="1">
-                <input type="email" name="Mail" placeholder="Ваш e-mail" tabindex="2">
-                <textarea name="Message" placeholder="Сообщение" tabindex="3"></textarea>
-                <button type="submit"></button>
-            </form>
-        </section>
+          </li>
+          <li>
+            <h2 class="subtitle">офис</h2>
+            <address class="address">
+              <ul class="list">
+                <li>
+                  <a
+                    href="https://goo.gl/maps/ms1uTJaVjh3mroaZ7"
+                    rel="noopener noreferrer"
+                    class="address-link office-link"
+                    >ст. м. «Лиговский проспект», ул. Черняховского, д. 75</a
+                  >
+                </li>
+                <li>
+                  <a href="tel:+78122106795" rel="noopener noreferrer" class="address-link"
+                    >+7 (812) 210 67 95</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="mailto:hello@summerpalace.ru"
+                    rel="noopener noreferrer"
+                    class="address-link"
+                    >hello@summerpalace.ru</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </li>
+        </ul>
+        <form action="#">
+          <input type="text" name="Name" placeholder="Ваше имя" tabindex="1" />
+          <input type="email" name="Mail" placeholder="Ваш e-mail" tabindex="2" />
+          <textarea name="Message" placeholder="Сообщение" tabindex="3"></textarea>
+          <button type="submit"></button>
+        </form>
+      </section>
     </main>
     <!-- footer -->
     <footer class="footer">
-        <h2 class="site-title">наш instagram</h2>
-        <img src="./images/logo-small.svg" alt="Логотип" width="46" height="30">
-        <p class="logo-descr">летний дворец</p>
-        <div class="footer-img"></div>
-        <p class="footer-text">Copyright (с) 2019 Ресторан “Летний дворец”</p>
-        <p class="footer-text">Facebook — Vkontakte — Instagram</p>
+      <h2 class="site-title">наш instagram</h2>
+      <img src="./images/logo-small.svg" alt="Логотип" width="46" height="30" />
+      <p class="logo-descr">летний дворец</p>
+      <div class="footer-img"></div>
+      <p class="footer-text">Copyright (с) 2019 Ресторан “Летний дворец”</p>
+      <p class="footer-text">Facebook — Vkontakte — Instagram</p>
     </footer>
-</body>
-
+  </body>
 </html>
