mod #4 - almoust done

--- a/index.html
+++ b/index.html
@@ -91,28 +91,28 @@
           </div>
           <ul class="about-list list">
             <li class="item">
-              <h2 class="subtitle">площадка</h2>
+              <h2 class="subtitle small-logo">площадка</h2>
               <p class="text-descr">
                 Сочетание классических интерьеров и современных технических возможностей выгодно
                 отличают Летний Дворец от большинства других исторических площадок города.
               </p>
             </li>
             <li class="item">
-              <h2 class="subtitle">интерьеры</h2>
+              <h2 class="subtitle interior">интерьеры</h2>
               <p class="text-descr">
                 Изысканное внутреннее убранство Летнего Дворца — тонко выполненная стилизация с
                 использованием традиционных технологий и материалов — мрамора, бронзового литья.
               </p>
             </li>
             <li class="item">
-              <h2 class="subtitle">технологии</h2>
+              <h2 class="subtitle technologies">технологии</h2>
               <p class="text-descr">
                 Возможности «Летнего Дворца» практически безграничны с точки зрения проведения
                 мероприятий самого разного формата и масштаба.
               </p>
             </li>
             <li class="item">
-              <h2 class="subtitle">оборудование</h2>
+              <h2 class="subtitle equipment">оборудование</h2>
               <p class="text-descr">
                 Установлен комплект самого современного звукового оборудования, который приятно
                 удивит даже знатока качественного звука.
@@ -145,10 +145,12 @@
     </section>
     <!-- learn more section -->
     <section class="learn-more section">
-      <h2 class="learn-more-title title">узнайте о нас больше</h2>
-      <div class="learn-more-link">
-        <a href="#" download class="item link">Скачать план</a>
-        <a href="#" download class="item link">Скачать презентацию</a>
+      <div class="container">
+        <h2 class="learn-more-title title">узнайте о нас больше</h2>
+        <div class="learn-more-link">
+          <a href="#" download class="item link">Скачать план</a>
+          <a href="#" download class="item link">Скачать презентацию</a>
+        </div>
       </div>
     </section>
     <!-- form section -->
