--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
                   <p class="subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
                 </div>
               </div>
+              <div class="overlay">
+                <p class="over-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio eos amet repellat
+                  perspiciatis eum, corporis reprehenderit ratione labore aperiam provident ipsum
+                  tempore magni, distinctio iste blanditiis facilis architecto maxime accusantium
+                  voluptatum assumenda tempora deserunt neque. Commodi quibusdam assumenda, fugiat
+                  qui eligendi fugit quis ipsa sapiente modi totam quos et repellat unde aliquid
+                  laborum quaerat tenetur iste ipsum quia id impedit. Eligendi cumque facilis, totam
+                  suscipit porro minima maxime esse ea maiores deleniti odit illum fuga magnam sed
+                  culpa provident quam quaerat minus pariatur ipsum obcaecati aut. Molestias quo
+                  asperiores unde accusantium. Animi omnis nam, ab dignissimos repudiandae minus
+                  corrupti quibusdam.
+                </p>
+              </div>
             </li>
             <li class="list-item">
               <div class="item">
@@ -61,6 +75,20 @@
                   <p class="subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
                 </div>
               </div>
+              <div class="overlay">
+                <p class="over-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio eos amet repellat
+                  perspiciatis eum, corporis reprehenderit ratione labore aperiam provident ipsum
+                  tempore magni, distinctio iste blanditiis facilis architecto maxime accusantium
+                  voluptatum assumenda tempora deserunt neque. Commodi quibusdam assumenda, fugiat
+                  qui eligendi fugit quis ipsa sapiente modi totam quos et repellat unde aliquid
+                  laborum quaerat tenetur iste ipsum quia id impedit. Eligendi cumque facilis, totam
+                  suscipit porro minima maxime esse ea maiores deleniti odit illum fuga magnam sed
+                  culpa provident quam quaerat minus pariatur ipsum obcaecati aut. Molestias quo
+                  asperiores unde accusantium. Animi omnis nam, ab dignissimos repudiandae minus
+                  corrupti quibusdam.
+                </p>
+              </div>
             </li>
             <li class="list-item">
               <div class="item">
@@ -68,6 +96,20 @@
                   <h3 class="title">званые вечера</h3>
                   <p class="subtitle">Отметьте лучший праздник в лучшем дворце Петербурга!</p>
                 </div>
+              </div>
+              <div class="overlay">
+                <p class="over-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio eos amet repellat
+                  perspiciatis eum, corporis reprehenderit ratione labore aperiam provident ipsum
+                  tempore magni, distinctio iste blanditiis facilis architecto maxime accusantium
+                  voluptatum assumenda tempora deserunt neque. Commodi quibusdam assumenda, fugiat
+                  qui eligendi fugit quis ipsa sapiente modi totam quos et repellat unde aliquid
+                  laborum quaerat tenetur iste ipsum quia id impedit. Eligendi cumque facilis, totam
+                  suscipit porro minima maxime esse ea maiores deleniti odit illum fuga magnam sed
+                  culpa provident quam quaerat minus pariatur ipsum obcaecati aut. Molestias quo
+                  asperiores unde accusantium. Animi omnis nam, ab dignissimos repudiandae minus
+                  corrupti quibusdam.
+                </p>
               </div>
             </li>
           </ul>
@@ -280,7 +322,17 @@
       </div>
       <div class="footer-bottom container">
         <p class="footer-text">Copyright (с) 2019 Ресторан “Летний дворец”</p>
-        <p class="footer-text">Facebook — Vkontakte — Instagram</p>
+        <ul class="footer-text">
+          <li class="item">
+            <a class="social-link" href="#" target="_blank" rel="noopener noreferrer">Facebook</a>
+          </li>
+          <li class="item">
+            <a class="social-link" href="#" target="_blank" rel="noopener noreferrer">Vkontakte</a>
+          </li>
+          <li class="item">
+            <a class="social-link" href="#" target="_blank" rel="noopener noreferrer">Instagram</a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
