--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="learn-more-link">
           <a href="./files/Про затвердження Правил охорони ... _ від 19.12.2013 № 966.pdf" download
             class="item link">Скачать план</a>
-          <button data-modal-open class="item link">Скачать презентацию</button>
+          <button data-modal-open class="item link">Заказать столик</button>
         </div>
       </div>
     </section>
