--- a/index.html
+++ b/index.html
@@ -49,16 +49,25 @@
             </div>
             <div class="overlay">
               <p class="over-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio eos amet repellat
-                perspiciatis eum, corporis reprehenderit ratione labore aperiam provident ipsum
-                tempore magni, distinctio iste blanditiis facilis architecto maxime accusantium
-                voluptatum assumenda tempora deserunt neque. Commodi quibusdam assumenda, fugiat
-                qui eligendi fugit quis ipsa sapiente modi totam quos et repellat unde aliquid
-                laborum quaerat tenetur iste ipsum quia id impedit. Eligendi cumque facilis, totam
-                suscipit porro minima maxime esse ea maiores deleniti odit illum fuga magnam sed
-                culpa provident quam quaerat minus pariatur ipsum obcaecati aut. Molestias quo
-                asperiores unde accusantium. Animi omnis nam, ab dignissimos repudiandae minus
-                corrupti quibusdam.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus quos quam quisquam pariatur rerum
+                sunt fuga quae nulla? Officiis, necessitatibus? Rem nihil provident neque repudiandae repellat!
+                Necessitatibus, voluptatum? Officiis velit vel natus iste exercitationem, consectetur, dolorem
+                blanditiis autem corporis dolores, ipsa impedit laudantium? Dolorum cum libero rerum qui laudantium
+                aspernatur tempore quidem modi, alias assumenda nobis quo odit illum consequatur nesciunt! Ipsa
+                quibusdam possimus ducimus veritatis sit quod ratione debitis vel eveniet ea accusamus ab aperiam quia
+                ex temporibus odio, error similique ipsum recusandae nesciunt! Ducimus alias placeat temporibus enim
+                numquam, itaque molestiae labore earum et harum omnis praesentium error veritatis quo impedit! Iusto
+                repudiandae suscipit dicta incidunt voluptatibus quod corrupti odio itaque, debitis ea totam quia.
+                Necessitatibus, ex debitis magni quia quisquam voluptates quod minima optio ut voluptatem natus
+                laudantium nisi perspiciatis eveniet, eius soluta sapiente nam rerum consectetur consequuntur enim
+                voluptatibus perferendis obcaecati molestiae. Alias nesciunt rerum magni exercitationem beatae enim
+                commodi fugit tempora, magnam accusantium ducimus esse repudiandae, inventore quia. Dolore iste quaerat
+                quo necessitatibus, tempore at ipsam natus aliquam illo ipsa, iusto officia animi voluptatibus molestiae
+                libero? Tempore eligendi deleniti molestias nihil, a esse, nobis magnam porro velit blanditiis nemo
+                ipsum voluptates odio minus quibusdam vero incidunt ex impedit dolor mollitia quis fuga explicabo
+                similique temporibus! Quia itaque incidunt doloribus est corrupti soluta non vero aut, enim sunt dolorum
+                asperiores, a eius sint voluptatum officia adipisci impedit? Laudantium corrupti sint error ad, beatae
+                delectus, sequi repellendus quasi nostrum placeat ullam magnam? Praesentium neque ullam quo maxime?
               </p>
             </div>
           </li>
