--- a/index.html
+++ b/index.html
@@ -18,19 +18,31 @@
 <body>
   <!-- header -->
   <header class="header">
-    <div class="top-container header-wrap">
-      <img src="./images/logo.svg" alt="Логотип" width="160" height="87" />
+    <div class="header__wrap top-container">
+      <img class="logo" src="./images/logo.svg" alt="Логотип" width="160" height="87" />
       <nav class="site-nav">
-        <ul class="nav-list list">
-          <li class="item"><a href="#" class="link current">Главная</a></li>
-          <li class="item"><a href="#" class="link">SOFIT EVENT HOUSE</a></li>
-          <li class="item"><a href="#" class="link">МЕРОПРИЯТИЯ</a></li>
-          <li class="item"><a href="#" class="link">ТУРИСТАМ</a></li>
-          <li class="item"><a href="#" class="link">КЕЙТЕРИНГ</a></li>
-          <li class="item"><a href="#" class="link">ДЛЯ АГЕНТСТВ</a></li>
+        <ul class="site-nav__list header__list">
+          <li class="site-nav__item">
+            <a href="#" class="site-nav__link site-nav__link--current">Главная</a>
+          </li>
+          <li class="site-nav__item">
+            <a href="#" class="site-nav__link">SOFIT EVENT HOUSE</a>
+          </li>
+          <li class="site-nav__item">
+            <a href="#" class="site-nav__link">МЕРОПРИЯТИЯ</a>
+          </li>
+          <li class="site-nav__item">
+            <a href="#" class="site-nav__link">ТУРИСТАМ</a>
+          </li>
+          <li class="site-nav__item">
+            <a href="#" class="site-nav__link">КЕЙТЕРИНГ</a>
+          </li>
+          <li class="site-nav__item">
+            <a href="#" class="site-nav__link">ДЛЯ АГЕНТСТВ</a>
+          </li>
         </ul>
       </nav>
-      <img src="./images/ext-menu.svg" alt="Бургер меню" width="40" height="20" />
+      <img class="burger" src="./images/ext-menu.svg" alt="Бургер меню" width="40" height="20" />
     </div>
   </header>
   <!-- main -->
@@ -321,6 +333,33 @@
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button class="modal-btn" data-modal-close>x</button>
+      <form class="modal-form">
+        <div class="radio-btn" class="form-group" role="group" aria-labelledby="countries-head">
+          <p class="radio-title" id="countries-head">Choose you country</p>
+          <div class="fields-wrap">
+            <div class="input-wrap">
+              <input class="radio-input hidden" type="radio" name="country" id="USA">
+              <label class="radio-label" for="USA">USA</label>
+            </div>
+            <div class="input-wrap">
+              <input class="radio-input hidden" type="radio" name="country" id="Canada">
+              <label class="radio-label" for="Canada">Canada</label>
+            </div>
+            <div class="input-wrap">
+              <input class="radio-input hidden" type="radio" name="country" id="Poland">
+              <label class="radio-label" for="Poland">Poland</label>
+            </div>
+            <div class="input-wrap">
+              <input class="radio-input hidden" type="radio" name="country" id="Ukraine">
+              <label class="radio-label" for="Ukraine">Ukraine</label>
+            </div>
+            <div class="input-wrap">
+              <input class="radio-input hidden" type="radio" name="country" id="Some Europe">
+              <label class="radio-label" for="Some Europe">Some Europe</label>
+            </div>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
   <!-- backdrop script -->
